[gd_scene load_steps=9 format=2]

[ext_resource path="res://game/hud/hud.gd" type="Script" id=1]
[ext_resource path="res://game/hud/hud.svg" type="Texture" id=2]
[ext_resource path="res://game/hud/cow-icon.svg" type="Texture" id=3]
[ext_resource path="res://game/hud/under.svg" type="Texture" id=4]
[ext_resource path="res://game/hud/fuelmeter_over.svg" type="Texture" id=5]
[ext_resource path="res://game/hud/fuelmeter.svg" type="Texture" id=6]
[ext_resource path="res://game/hud/healthbar_over.svg" type="Texture" id=7]
[ext_resource path="res://game/hud/healthbar.svg" type="Texture" id=8]

[node name="hud" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script = ExtResource( 1 )

[node name="hud" type="Sprite" parent="."]

position = Vector2( 161, 516 )
texture = ExtResource( 2 )

[node name="cow_counter" type="Node2D" parent="."]

visible = false
position = Vector2( 969.355, 44.863 )
_sections_unfolded = [ "Visibility" ]

[node name="icon" type="Sprite" parent="cow_counter"]

texture = ExtResource( 3 )

[node name="counter" type="Label" parent="cow_counter"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -61.0
margin_top = -9.0
margin_right = -21.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color_shadow = Color( 0.212891, 0.212891, 0.212891, 1 )
text = "12"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts", "custom_styles" ]

[node name="fuel_meter" type="TextureProgress" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 110.0
margin_top = 568.0
margin_right = 333.0
margin_bottom = 608.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = ExtResource( 4 )
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 6 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Textures" ]

[node name="health_bar" type="TextureProgress" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 96.0
margin_top = 537.0
margin_right = 319.0
margin_bottom = 577.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = ExtResource( 4 )
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 8 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Textures" ]


